# N-qliyyat-sektorunda-y-k-da-nmas-EDA

./: README.md  idda-eda (1).html  idda-eda (1).ipynb  nqliyyat_sektorunda_yuk_danmas__min_ton_20250424140850.csv  pyproject.toml
