[project]
name = "azerbaijan-freight-eda"
version = "0.1.0"
description = "Exploratory Data Analysis of Freight Transportation trends in Azerbaijan (1995-2023)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "numpy>=1.26.0",
]
